# proxydroid

./: .gitmodules  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/all/: gost.sh
app/src/main/assets/armeabi-v7a/: proxy.sh
app/src/main/assets/x86/: gost_dns.sh
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/redsocks/: CMakeLists.txt
app/src/main/cpp/redsocks_bak/: CMakeLists.txt
app/src/main/cpp/redsocks_bak/src/: log.c  main.c  redsocks.c  redsocks.h  utils.h
app/src/main/java/org/proxydroid/: AppManager.java  BypassListActivity.java  ConnectivityBroadcastReceiver.java  DomainValidator.java  FileArrayAdapter.java  FileChooser.java  InnerSocketBuilder.java  Profile.java  ProxyDroid.java  ProxyDroidReceiver.java  ProxyDroidService.java  ProxyDroidWidgetProvider.java
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: proxydroid_preference.xml
app/src/main/res/xml-v14/: proxydroid_preference.xml
gradle/wrapper/: gradle-wrapper.properties
